# website

./: .editorconfig  .gitignore  .htmlvalidate.json  .htmlvalidateignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .readthedocs.yml  .tool-versions  .tool-versions-example  .vale.ini  AGENTS.md  Dockerfile  MARKETING_AUDIT.md  README.rst  conf.py  docker-compose.yml  docker_entrypoint.sh  package-lock.json  package.json  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  webpack.config.js  webpack.config.mjs
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: documentation-links.yaml
.pre-commit/: check-build-assets.sh
content/includes/: business-logos.html  try-it-out-custom.html  try-it-out-docusaurus.html  try-it-out-jupyter-book.html  try-it-out-markdoc.html  try-it-out-mkdocs.html  try-it-out-pelican.html  try-it-out.html  users-jupyter-book.html  users-mkdocs.html  users-sphinx.html
content/pages/: about.html  addons.html  choosing-a-platform.rst  company.html  company.md  company.rst  comparing-our-two-sites.rst  custom.html  docs-as-code.html  enterprise.html  features.html  homepage.html  homepage.md  homepage.rst  pricing.html  pricing.md  pricing.rst  privacy-policy.rst  product.md  product.rst  sphinx.html  terms-of-service.rst  usage.html
content/partials/: about.html  basic.html  comparisons.html  features.html  homepage.html  marketing.html  pricing.html  technical.html
content/posts/: 10-year-anniversary.md  2022-war-in-ukraine.rst  2025-vision.md  addons-by-default.md  ai-crawlers-abuse.md  docs-ai-tools.md  (+48 more)
(+122 files in other folders)
