[project]
name = "website"
version = "1.0.0"
description = "Read the Docs website"
authors = [
  { name = "Read the Docs, Inc" }
]
requires-python = ">=3.10"
dependencies = [
  "Jinja2 ~=3.0.3",
  "pelican ==4.5.0",
  "Markdown ==3.2",
  "pelican-related-posts ==1.0.0",
  "pre-commit ==2.16.0",
  "pelican-jinja2content >=1.0.1",
  "jinja-markdown >=1.210911"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
